--- a/css/navbar/navbar.module.css
+++ b/css/navbar/navbar.module.css
@@ -22,10 +22,7 @@
   background-position: 0% 0%;
   background-repeat: no-repeat;
   border: none;
-  -moz-box-shadow: none;
   box-shadow: none;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   bottom: auto;
   color: black;
